--- a/TypeColor.html
+++ b/TypeColor.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head></head>
 <body>
+
 
   <p> Depending on browser support:<br>
      A color picker can pop-up when you enter the input field.
